--- a/SugarSenseML.ipynb
+++ b/SugarSenseML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOoJeDqzS52fE5UQO0AlZLY",
+      "authorship_tag": "ABX9TyOMNb16fpZLQJctDlNAHaSE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#installer pyspark"
+      ],
+      "metadata": {
+        "id": "D7EV_OGHIlX9"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,6 +60,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Initialisation d'une session Spark pour la prédiction du diabète"
+      ],
+      "metadata": {
+        "id": "Emf4zgVkIqRT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from pyspark.sql import SparkSession\n",
@@ -60,8 +78,17 @@
       "metadata": {
         "id": "8Tzi5fnBqMAI"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Chargement et exploration des données de diabète avec PySpark"
+      ],
+      "metadata": {
+        "id": "KjFdauGQJJ1D"
+      }
     },
     {
       "cell_type": "code",
@@ -76,7 +103,7 @@
         "id": "ecxEvLeuqTiE",
         "outputId": "b6833daf-02cd-43bc-c549-20db05e75977"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +117,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Remplacer par le chemin vers ton fichier sur Google Drive\n",
         "file_path = \"/content/drive/MyDrive/diabetes.csv\"\n",
         "\n",
         "# Charger les données dans un DataFrame\n",
@@ -104,7 +130,7 @@
         "id": "bjY31KgiqXDo",
         "outputId": "ee6a43ce-1659-4f34-8a44-43bb99c9c3bd"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,6 +148,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Extraction et sauvegarde d'un échantillon de 20% des données avec PySpark\n",
+        "pour la partie de validation"
+      ],
+      "metadata": {
+        "id": "l9P_X5ycJQ68"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from pyspark.sql import SparkSession\n",
@@ -129,10 +165,10 @@
         "# Créer une session Spark\n",
         "spark = SparkSession.builder.appName(\"Save20Percent\").getOrCreate()\n",
         "\n",
-        "# Charger le fichier CSV (votre base de données)\n",
+        "# Charger le fichier CSV\n",
         "data = spark.read.csv(\"/content/drive/MyDrive/diabetes.csv\", header=True, inferSchema=True)\n",
         "\n",
-        "# Diviser les données pour prendre 20% (ici on prend 20% des données et le reste 80%)\n",
+        "# Diviser les données pour prendre 20%\n",
         "df1, sample_data = data.randomSplit([0.8, 0.2], seed=1234)\n",
         "\n",
         "# Sauvegarder ces 20% dans un fichier CSV dans Google Drive\n",
@@ -148,7 +184,7 @@
         "id": "IXEEbsBCqopW",
         "outputId": "8bce669f-2aaa-4a2b-d1f3-df59123723ab"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +204,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Classification du diabète à l'aide d'un arbre de décision avec PySpark"
+      ],
+      "metadata": {
+        "id": "KxXQyBG9LM7b"
+      }
     },
     {
       "cell_type": "code",
@@ -191,7 +236,6 @@
         "feature_columns = [\"Pregnancies\", \"Glucose\", \"BloodPressure\", \"SkinThickness\", \"Insulin\", \"BMI\",\n",
         "                   \"DiabetesPedigreeFunction\", \"Age\"]\n",
         "\n",
-        "# Utiliser VectorAssembler pour assembler les caractéristiques dans une seule colonne \"features\"\n",
         "assembler = VectorAssembler(inputCols=feature_columns, outputCol=\"features\")\n",
         "\n",
         "# Définir l'arbre de décision\n",
@@ -200,7 +244,7 @@
         "# Construire le pipeline\n",
         "pipeline = Pipeline(stages=[assembler, dt])\n",
         "\n",
-        "# Diviser les données en ensemble d'entraînement et de test (80% entraînement, 20% test)\n",
+        "# Diviser les données en ensemble d'entraînement et de test\n",
         "train_data, test_data = data.randomSplit([0.8, 0.2], seed=1234)\n",
         "\n",
         "# Entraîner le modèle\n",
@@ -219,7 +263,7 @@
         "auc = evaluator.evaluate(predictions)\n",
         "print(f\"AUC: {auc}\")\n",
         "\n",
-        "# Sauvegarder le modèle (optionnel)\n",
+        "\n",
         "model.write().overwrite().save(\"decision_tree_model_diabetes\")\n"
       ],
       "metadata": {
@@ -229,7 +273,7 @@
         "id": "6M5sKTgdquwu",
         "outputId": "1f3436b1-307b-4c59-8386-726417827045"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,6 +305,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Séparation des caractéristiques et des résultats à partir d'un jeu de données de diabète avec PySpark"
+      ],
+      "metadata": {
+        "id": "TAMNBePlLYyG"
+      }
     },
     {
       "cell_type": "code",
@@ -296,7 +349,7 @@
         "id": "uQrfkQ3_qzv0",
         "outputId": "23670fd8-1db5-42d9-9d75-70a5c2cb638f"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,6 +382,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Application d'un modèle de forêt aléatoire pour la prédiction sur des données de diabète avec PySpark\n",
+        "parti de validation"
+      ],
+      "metadata": {
+        "id": "lKprMrSxLngt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from pyspark.sql import SparkSession\n",
@@ -347,10 +410,9 @@
         "features_data.printSchema()\n",
         "\n",
         "# Appliquer le modèle directement aux données\n",
-        "# Assurez-vous que les colonnes de features sont les bonnes et correspondent aux colonnes utilisées pour l'entraînement\n",
         "assembler = VectorAssembler(\n",
         "    inputCols=[\"Pregnancies\", \"Glucose\", \"BloodPressure\", \"SkinThickness\", \"Insulin\",\n",
-        "               \"BMI\", \"DiabetesPedigreeFunction\", \"Age\"],  # Liste des colonnes de features\n",
+        "               \"BMI\", \"DiabetesPedigreeFunction\", \"Age\"],\n",
         "    outputCol=\"feature\"\n",
         ")\n",
         "\n",
@@ -360,7 +422,6 @@
         "# Appliquer le modèle pour obtenir les prédictions\n",
         "predictions = model.transform(assembled_data)\n",
         "\n",
-        "# Sélectionner uniquement la colonne \"prediction\" (qui contient les résultats de la prédiction)\n",
         "predictions_result = predictions.select(\"prediction\")\n",
         "\n",
         "# Afficher les premières lignes des prédictions\n",
@@ -376,7 +437,7 @@
         "id": "K-U78tzpq2xx",
         "outputId": "7ae03c09-da9a-4831-c8d8-fef532ec3567"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,6 +482,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Évaluation des performances d'un modèle de classification avec PySpark"
+      ],
+      "metadata": {
+        "id": "Vo4DJTAHL3zo"
+      }
     },
     {
       "cell_type": "code",
@@ -486,7 +556,7 @@
         "id": "nUiBSF5_q6EG",
         "outputId": "a508e53d-8eef-4b6e-fad2-c21beccb9dc8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,6 +597,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#télécharger le modèle  avec PySpark sur votre machine locale"
+      ],
+      "metadata": {
+        "id": "WT35QDnnL580"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!ls -l decision_tree_model_diabetes\n"
@@ -538,7 +617,7 @@
         "id": "eoOCiIBYq9hl",
         "outputId": "97890c30-9f47-4057-e04a-cfa7be2a90e1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +642,7 @@
         "id": "rrJCi4S5s1-r",
         "outputId": "0ffdb4fd-8e25-4edc-d137-f7205a75e3ea"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +688,7 @@
         "id": "u6Untj1zs5P4",
         "outputId": "8f449966-04fb-4e2b-e342-cbfe74b7bec6"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +704,6 @@
       "source": [
         "from google.colab import files\n",
         "\n",
-        "# Télécharger le fichier ZIP\n",
         "files.download(\"decision_tree_model_diabetes.zip\")\n"
       ],
       "metadata": {
@@ -636,7 +714,7 @@
         "id": "dgW111nss8O-",
         "outputId": "df110d45-3199-4d15-b2f4-65e8560603d9"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
